core: upload version 0.1.0

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "node build/index.js",
     "start:dev": "npx nodemon",
+    "start:build": "tsc -w",
     "build": "tsc",
     "lint": "eslint . --ext .ts"
   },
