--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node build/index.js",
     "start:dev": "npx nodemon",
     "start:build": "tsc -w",
-    "build": "tsc",
+    "build": "genversion --es6 lib/version.js && esbuild --external:'semver' --minify --bundle --platform=node --outfile=build/index.js src/index.ts",
+    "dev": "genversion --es6 lib/version.js && esbuild --external:'semver' --watch --sourcemap=inline --bundle --platform=node --outfile=index.js src/index.ts",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
@@ -34,8 +35,10 @@
     "@types/node": "^18.15.13",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "esbuild": "^0.17.18",
     "eslint": "^8.39.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "genversion": "^3.1.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "terser": "^5.17.1",
